--- a/about-us.html
+++ b/about-us.html
@@ -140,7 +140,7 @@
             </div>
             <div class="span3">
                 <div class="box">
-                    <p><img src="./images/Faiizy.jpg" alt="" ></p>
+                    <p><img src="/images/Faiizy.jpg" alt="" ></p>
                     <h5>Faiizy</h5>
                     <p>Tester.</p>
                     <a class="btn btn-social btn-facebook" href="https://www.facebook.com/faiizy.9899"><i class="icon-facebook"></i></a>
