--- a/about-us.html
+++ b/about-us.html
@@ -124,7 +124,7 @@
         <div class="row-fluid">
             <div class="span3">
                 <div class="box">
-                    <p><img src="./images/Churi.jpg" alt="" ></p>
+                    <p><img src="images/Churi.jpg" alt="" ></p>
                     <h5>Huynh Nguyen Le Van</h5>
                     <p>Team leader.</p>
                     <a class="btn btn-social btn-facebook" href="https://www.facebook.com/profile.php?id=100004193952102"><i class="icon-facebook"></i></a>
@@ -132,7 +132,7 @@
             </div>
             <div class="span3">
                 <div class="box">
-                    <p><img src="./images/Aniot.jpg" alt="" ></p>
+                    <p><img src="images/Aniot.jpg" alt="" ></p>
                     <h5>Aniot</h5>
                     <p>Coder.</p>
                     <a class="btn btn-social btn-facebook" href="https://www.facebook.com/thanhphong.hoang.391"><i class="icon-facebook"></i></a>
@@ -140,7 +140,7 @@
             </div>
             <div class="span3">
                 <div class="box">
-                    <p><img src="/images/Faiizy.jpg" alt="" ></p>
+                    <p><img src="images/Faiizy.jpg" alt="" ></p>
                     <h5>Faiizy</h5>
                     <p>Tester.</p>
                     <a class="btn btn-social btn-facebook" href="https://www.facebook.com/faiizy.9899"><i class="icon-facebook"></i></a>
@@ -148,7 +148,7 @@
             </div>
             <div class="span3">
                 <div class="box">
-                    <p><img src="./images/Cynos.jpg" alt="" ></p>
+                    <p><img src="images/Cynos.jpg" alt="" ></p>
                     <h5>Cynos</h5>
                     <p>Designer.</p>
                     <a class="btn btn-social btn-facebook" href="https://www.facebook.com/Trung.Cynos"><i class="icon-facebook"></i></a>
