--- a/404.html
+++ b/404.html
@@ -29,7 +29,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </a>
-                <a id="logo" class="pull-left" href="index.html"></a>
+                <a id="logo" class="pull-left" href="home.html"></a>
                 <div class="nav-collapse collapse pull-right">
                     <ul class="nav">
                         <li><a href="index.html">Home</a></li>
@@ -54,7 +54,7 @@
     <section id="error" class="container">
         <h1>404, Page not found</h1>
         <p>The Page you are looking for doesn't exist or an other error occurred.</p>
-        <a class="btn btn-success" href="index.html">GO BACK TO THE HOMEPAGE</a>
+        <a class="btn btn-success" href="home.html">GO BACK TO THE HOMEPAGE</a>
     </section>
     <!-- /404 error -->
     <!--Footer-->
