--- a/another_page.html
+++ b/another_page.html
@@ -15,14 +15,14 @@
       <div id="logo">
         <div id="logo_text">
           <!-- class="logo_colour", allows you to change the colour of the text -->
-          <h1><a href="index.html">Van<span class="logo_colour">Website</span></a></h1>
+          <h1><a href="home.html">Van<span class="logo_colour">Website</span></a></h1>
           <h2>Simple. Contemporary.</h2>
         </div>
       </div>
       <div id="menubar">
         <ul id="menu">
           <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
-          <li><a href="index.html">Home</a></li>
+          <li><a href="home.html">Home</a></li>
           <li><a href="page.html">Lorem</a></li>
           <li class="selected"><a href="another_page.html">Lorem history</a></li>
           <li><a href="contact.html">Contact Us</a></li>
@@ -80,7 +80,7 @@ The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for t
     </div>
     <div id="content_footer"></div>
     <div id="footer">
-      <p><a href="index.html">Home</a> | <a href="examples.html">Examples</a> | <a href="page.html">A Page</a> | <a href="another_page.html">Lorem history</a> | <a href="contact.html">Contact Us</a></p>
+      <p><a href="home.html">Home</a> | <a href="examples.html">Examples</a> | <a href="page.html">A Page</a> | <a href="another_page.html">Lorem history</a> | <a href="contact.html">Contact Us</a></p>
       <p>Copyright &copy; textured_orbs | <a href="http://validator.w3.org/check?uri=referer">HTML5</a> | <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a> | <a href="http://www.html5webtemplates.co.uk">Website templates</a></p>
     </div>
   </div>
