--- a/services.html
+++ b/services.html
@@ -29,7 +29,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </a>
-                <a id="logo" class="pull-left" href="index.html"></a>
+                <a id="logo" class="pull-left" href="home.html"></a>
                 <div class="nav-collapse collapse pull-right">
                     <ul class="nav">
                         <li><a href="home.html">Home</a></li>
