--- a/about-us.html
+++ b/about-us.html
@@ -29,10 +29,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                   </a>
-                  <a id="logo" class="pull-left" href="index.html"></a>
+                  <a id="logo" class="pull-left" href="home.html"></a>
                 <div class="nav-collapse collapse pull-right">
                     <ul class="nav">
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="home.html">Home</a></li>
                         <li class="active"><a href="about-us.html">About Us</a></li>
                         <li><a href="services.html">Services</a></li>
                         <li class="dropdown">
@@ -57,7 +57,7 @@
                 </div>
                 <div class="span6">
                     <ul class="breadcrumb pull-right">
-                        <li><a href="index.html">Home</a> <span class="divider">/</span></li>
+                        <li><a href="home.html">Home</a> <span class="divider">/</span></li>
                         <li class="active">About Us</li>
                     </ul>
                 </div>
@@ -124,7 +124,7 @@
         <div class="row-fluid">
             <div class="span3">
                 <div class="box">
-                    <p><img src="images/Churi.jpg" alt="" ></p>
+                    <p><img src="C:\Users\van\Downloads\Churi.jpg" alt="" ></p>
                     <h5>Huynh Nguyen Le Van</h5>
                     <p>Team leader.</p>
                     <a class="btn btn-social btn-facebook" href="https://www.facebook.com/profile.php?id=100004193952102"><i class="icon-facebook"></i></a>
@@ -132,7 +132,7 @@
             </div>
             <div class="span3">
                 <div class="box">
-                    <p><img src="images/Aniot.jpg" alt="" ></p>
+                    <p><img src="C:\Users\van\Downloads\Aniot.jpg" alt="" ></p>
                     <h5>Aniot</h5>
                     <p>Coder.</p>
                     <a class="btn btn-social btn-facebook" href="https://www.facebook.com/thanhphong.hoang.391"><i class="icon-facebook"></i></a>
@@ -140,7 +140,7 @@
             </div>
             <div class="span3">
                 <div class="box">
-                    <p><img src="images/Faiizy.jpg" alt="" ></p>
+                    <p><img src="C:\Users\van\Downloads\Faiizy.jpg" alt="" ></p>
                     <h5>Faiizy</h5>
                     <p>Tester.</p>
                     <a class="btn btn-social btn-facebook" href="https://www.facebook.com/faiizy.9899"><i class="icon-facebook"></i></a>
@@ -148,7 +148,7 @@
             </div>
             <div class="span3">
                 <div class="box">
-                    <p><img src="images/Cynos.jpg" alt="" ></p>
+                    <p><img src="C:\Users\van\Downloads\Cynos.jpg" alt="" ></p>
                     <h5>Cynos</h5>
                     <p>Designer.</p>
                     <a class="btn btn-social btn-facebook" href="https://www.facebook.com/Trung.Cynos"><i class="icon-facebook"></i></a>
